--- a/index.html
+++ b/index.html
@@ -107,12 +107,17 @@
     </div>
     <div class="main-content1">
         <div class="notice">
-            <strong>⚠️ Important Notice: Downloading modified applications can pose significant security risks.</strong>
+            <strong>⚠️ Important Notice: Downloading and using modified applications may expose you to significant
+                security risks.</strong>
             <ul>
-                <li>Lack official security measures</li>
-                <li>Violate intellectual property rights</li>
-                <li>Potentially harm your device</li>
+                <li><strong>Inadequate Security Protocols:</strong> Modified apps often lack official security.</li>
+                <li><strong>Intellectual Property Rights Protection:</strong> Intended exclusively for commercial or
+                    personal use, with a strong emphasis on respect for intellectual property rights.</li>
+                <li><strong>Privacy Protection:</strong> Ensuring that users' data privacy is protected without
+                    compromising it in any way.</li>
             </ul>
+            <p><strong>While you may take precautions, it's crucial to understand the risks associated with
+                    usingmodified applications.</strong></p>
         </div>
         <hr>
         <div>
@@ -300,7 +305,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/10feYHsiI26xruBY4HtuMYk8c0xjvF9Y9/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="MinerSeeker.webp" alt="LogoIYR8" width="100px" height="100px"
+                    <img src="MinerSeeker.webp" alt="LogoIYR9" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
@@ -310,7 +315,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1v8BoCE8TcGb2iUj3ajsuqXKQzgYUEnLi/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Stick Vetrea.webp" alt="LogoIYR9" width="100px" height="100px"
+                    <img src="Stick Vetrea.webp" alt="LogoIYR10" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
@@ -320,7 +325,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1hzq9YpykRWMVJ4pEl4yqotJsLP5GKYrf/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Stick Soldiers II.webp" alt="LogoIYR10" width="100px" height="100px"
+                    <img src="Stick Soldiers II.webp" alt="LogoIYR11" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
@@ -330,7 +335,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1y7z1ZgyvG69iXdT1sNAP-KVCcxCVgq6B/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Pac-Man.webp" alt="LogoIYR10" width="100px" height="100px"
+                    <img src="Pac-Man.webp" alt="LogoIYR12" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
@@ -340,11 +345,31 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1oSSasfPpB616Hp7PYMJlntEaJhQl8dKP/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="GhostIP.webp" alt="LogoIYR10" width="100px" height="100px"
+                    <img src="GhostIP.webp" alt="LogoIYR13" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>GhostIP</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1kDXA-lXk1WL2nj9tbVHWLoEVXtlgql1Q/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="ResourceHacker.webp" alt="LogoIYR14" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>ResourceHacker</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/189sJFhX1j6wpcjCVSXUO90ki-usQ_P6q/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="ThrottleStop.webp" alt="LogoIYR15" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>ThrottleStop</h1>
                 </div>
             </div>
         </div>
