--- a/index.html
+++ b/index.html
@@ -373,6 +373,16 @@
                     <h1>Synthèse 1</h1>
                 </div>
             </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1dydsXMx5SBFxfSMFCBZP8suTl8wUpD5Y/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="PowerOfEnergy.webp" alt="LogoIYR16" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>PowerOfEnergy</h1>
+                </div>
+            </div>
         </div>
     </div>
 </body>
