--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1HVhZaIkImeksy6-Jmg1uPIky4XgbDuh3/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/kB5HiLTL#o2wE6RKRZfT-DvycsdsEVzdbeXnNm5NWhpbL7_1E1iQ';">
                 <div class="app-icon">
                     <img src="Yed Games.webp" alt="LogoIYR2" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='';">
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1swC3bq_trK0Z9jckNQF4LDGqIkNib4Po/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/MEhilRiA#T2zQItS1tx-eiR3l0__if00POFbBJkAFu_O3oaGE3ZA';">
                 <div class="app-icon">
                     <img src="ColorFusion.webp" alt="LogoIYR3" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -253,7 +253,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/189sJFhX1j6wpcjCVSXUO90ki-usQ_P6q/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/tRx0iCgA#rLB6opPXyjh4sq0h7ALk_LkgwJmBtFB5smBZ3cgEdn8';">
                 <div class="app-icon">
                     <img src="ThrottleStop.webp" alt="LogoIYR4" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1YuwpVn0u5wc9X5mv_dsOu-TN477eSCJw/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/lJ5W0B6I#8gBfFnzk1A0nORAKrgHhfQdKFst0QoZSRhTLCGov7U0';">
                 <div class="app-icon">
                     <img src="cstrike.webp" alt="LogoIYR5" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -274,7 +274,7 @@
             </div>
 
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/10feYHsiI26xruBY4HtuMYk8c0xjvF9Y9/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/pdAi0DyY#s4Yz6oZv5saIvFWp3DMdtMQemux2WmpV5bbAZpg_Olc';">
                 <div class="app-icon">
                     <img src="MinerSeeker.webp" alt="LogoIYR6" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -284,7 +284,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1IFl5SdbYelr1bl9SwR_zpjLAw_NZFlaa/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/cQw3ATZL#pwZtA70Ln95z2pzp8F0qfw-wDGAkLAJYmPJQqvpWaY8';">
                 <div class="app-icon">
                     <img src="ase.webp" alt="LogoIYR7" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -294,7 +294,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1h3Ra33H646_rpk66PlN2hOf4ZcRR0uT0/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/FQBXFTCS#yDacCr-_EEdlO9Aki_uYnw7rgoqyIo0RcozqGwlBD1M';">
                 <div class="app-icon">
                     <img src="LosslessScaling.webp" alt="LogoIYR8" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1j8BXk8NstSl3C-rDBOgmdmRlP6LZci3l/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/0RxW2ArS#ctbIdOtlhDU5yqT2nK1epqTHv8t6RwnEgwWaKN_b3Gk';">
                 <div class="app-icon">
                     <img src="FileOptimizer.webp" alt="LogoIYR9" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -314,7 +314,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1v8BoCE8TcGb2iUj3ajsuqXKQzgYUEnLi/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/AFAzgBCK#2KIH4pOMPcAI752ZJJujTekiu3oV_P5bsGuYpIeVFq0';">
                 <div class="app-icon">
                     <img src="Stick Vetrea.webp" alt="LogoIYR10" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -324,7 +324,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1hzq9YpykRWMVJ4pEl4yqotJsLP5GKYrf/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/5V5jWL7b#6BBX9_Jalr1MNxaL6Z391lVrfgMdbfAzbJdQiR_M9Fk';">
                 <div class="app-icon">
                     <img src="Stick Soldiers II.webp" alt="LogoIYR11" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -334,7 +334,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1y7z1ZgyvG69iXdT1sNAP-KVCcxCVgq6B/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/IE4EmJjR#jB6L_xZLevAxaJAm57WmHOOMp7m0daBQGo1mqIqrbdA';">
                 <div class="app-icon">
                     <img src="Pac-Man.webp" alt="LogoIYR12" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -344,7 +344,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1oSSasfPpB616Hp7PYMJlntEaJhQl8dKP/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/dFpixRAS#aEehZebSu7aPGOzkRVqeFSWtelTt3yyVxNR_OsfW44k';">
                 <div class="app-icon">
                     <img src="GhostIP.webp" alt="LogoIYR13" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1kDXA-lXk1WL2nj9tbVHWLoEVXtlgql1Q/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/NFQgzQbb#Ir-E5nP2dNTfAXKL8n9Jy2gxTd129CAIDK4oEd3Woj0';">
                 <div class="app-icon">
                     <img src="ResourceHacker.webp" alt="LogoIYR14" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -364,17 +364,17 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1yIA1akUH9TSvZchyQt89arZp3VRsPKQS/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/MM52BJ7J#AilMR_0Ir8Mh6HUD-iwLSeys3hGIJQXjX1NZPtKXg90';">
                 <div class="app-icon">
                     <img src="exam.webp" alt="LogoIYR15" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
-                    <h1>Synthèse 1</h1>
+                    <h1>Synthèse1</h1>
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1dydsXMx5SBFxfSMFCBZP8suTl8wUpD5Y/view?usp=drive_link';">
+                onclick="window.location.href='https://mega.nz/file/ZYAHACRa#Cq2f8aioxVBd_DmQJRXQJ1Nyj5Os_7lHZeXjMxu0xg8';">
                 <div class="app-icon">
                     <img src="PowerOfEnergy.webp" alt="LogoIYR16" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
