--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         .main-content h1 {
-            font-size: 1.75rem;
+            font-size: 28px;
             margin: 0;
         }
 
@@ -27,7 +27,6 @@
             border-radius: 10px;
             border-left: 2px solid #FF0000;
             margin-bottom: 20px;
-            font-size: 0.95rem;
         }
 
         .main-content1 {
@@ -62,7 +61,7 @@
             align-items: center;
             padding: 12px 0 8px 0;
             cursor: pointer;
-            width: 140px;
+            width: 130px;
             transition: all 0.16s;
         }
 
@@ -80,7 +79,7 @@
         }
 
         .app-name h1 {
-            font-size: 1.125rem;
+            font-size: 18px;
             font-weight: 500;
         }
 
