Improve And Reduce Size

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/ZYAHACRa#Cq2f8aioxVBd_DmQJRXQJ1Nyj5Os_7lHZeXjMxu0xg8';">
+                onclick="window.location.href='https://mega.nz/file/dNgTgKwI#MhCMkllhmAuX0T4KserjX-2rg3_LbdKGpw7ZoNA3Pxg';">
                 <div class="app-icon">
                     <img src="PowerOfEnergy.webp" alt="LogoIYR16" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
