--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/kB5HiLTL#o2wE6RKRZfT-DvycsdsEVzdbeXnNm5NWhpbL7_1E1iQ';">
+                onclick="window.location.href='https://mega.nz/file/AZ5gQBAK#o2wE6RKRZfT-DvycsdsEVzdbeXnNm5NWhpbL7_1E1iQ';">
                 <div class="app-icon">
                     <img src="Yed Games.webp" alt="LogoIYR2" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='';">
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/MEhilRiA#T2zQItS1tx-eiR3l0__if00POFbBJkAFu_O3oaGE3ZA';">
+                onclick="window.location.href='https://mega.nz/file/JJ50DAgI#T2zQItS1tx-eiR3l0__if00POFbBJkAFu_O3oaGE3ZA';">
                 <div class="app-icon">
                     <img src="ColorFusion.webp" alt="LogoIYR3" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/tRx0iCgA#rLB6opPXyjh4sq0h7ALk_LkgwJmBtFB5smBZ3cgEdn8';">
+                onclick="window.location.href='https://mega.nz/file/UYZlWbaT#rLB6opPXyjh4sq0h7ALk_LkgwJmBtFB5smBZ3cgEdn8';">
                 <div class="app-icon">
                     <img src="ThrottleStop.webp" alt="LogoIYR4" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -262,7 +262,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/lJ5W0B6I#8gBfFnzk1A0nORAKrgHhfQdKFst0QoZSRhTLCGov7U0';">
+                onclick="window.location.href='https://mega.nz/file/ZIxV0arC#8gBfFnzk1A0nORAKrgHhfQdKFst0QoZSRhTLCGov7U0';">
                 <div class="app-icon">
                     <img src="cstrike.webp" alt="LogoIYR5" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -273,7 +273,7 @@
             </div>
 
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/pdAi0DyY#s4Yz6oZv5saIvFWp3DMdtMQemux2WmpV5bbAZpg_Olc';">
+                onclick="window.location.href='https://mega.nz/file/NNoDnRBI#s4Yz6oZv5saIvFWp3DMdtMQemux2WmpV5bbAZpg_Olc';">
                 <div class="app-icon">
                     <img src="MinerSeeker.webp" alt="LogoIYR6" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -283,7 +283,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/cQw3ATZL#pwZtA70Ln95z2pzp8F0qfw-wDGAkLAJYmPJQqvpWaY8';">
+                onclick="window.location.href='https://mega.nz/file/9BY1mabR#pwZtA70Ln95z2pzp8F0qfw-wDGAkLAJYmPJQqvpWaY8';">
                 <div class="app-icon">
                     <img src="ase.webp" alt="LogoIYR7" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/FQBXFTCS#yDacCr-_EEdlO9Aki_uYnw7rgoqyIo0RcozqGwlBD1M';">
+                onclick="window.location.href='https://mega.nz/file/VUIwTbpZ#yDacCr-_EEdlO9Aki_uYnw7rgoqyIo0RcozqGwlBD1M';">
                 <div class="app-icon">
                     <img src="LosslessScaling.webp" alt="LogoIYR8" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -303,7 +303,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/0RxW2ArS#ctbIdOtlhDU5yqT2nK1epqTHv8t6RwnEgwWaKN_b3Gk';">
+                onclick="window.location.href='https://mega.nz/file/1UpGCKCT#ctbIdOtlhDU5yqT2nK1epqTHv8t6RwnEgwWaKN_b3Gk';">
                 <div class="app-icon">
                     <img src="FileOptimizer.webp" alt="LogoIYR9" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -313,7 +313,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/AFAzgBCK#2KIH4pOMPcAI752ZJJujTekiu3oV_P5bsGuYpIeVFq0';">
+                onclick="window.location.href='https://mega.nz/file/VBYn3Q4B#2KIH4pOMPcAI752ZJJujTekiu3oV_P5bsGuYpIeVFq0';">
                 <div class="app-icon">
                     <img src="Stick Vetrea.webp" alt="LogoIYR10" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -323,7 +323,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/5V5jWL7b#6BBX9_Jalr1MNxaL6Z391lVrfgMdbfAzbJdQiR_M9Fk';">
+                onclick="window.location.href='https://mega.nz/file/IFZmxAJB#6BBX9_Jalr1MNxaL6Z391lVrfgMdbfAzbJdQiR_M9Fk';">
                 <div class="app-icon">
                     <img src="Stick Soldiers II.webp" alt="LogoIYR11" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -333,7 +333,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/IE4EmJjR#jB6L_xZLevAxaJAm57WmHOOMp7m0daBQGo1mqIqrbdA';">
+                onclick="window.location.href='https://mega.nz/file/UUJXHIAT#jB6L_xZLevAxaJAm57WmHOOMp7m0daBQGo1mqIqrbdA';">
                 <div class="app-icon">
                     <img src="Pac-Man.webp" alt="LogoIYR12" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -343,7 +343,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/dFpixRAS#aEehZebSu7aPGOzkRVqeFSWtelTt3yyVxNR_OsfW44k';">
+                onclick="window.location.href='https://mega.nz/file/kZ4XRZ7T#aEehZebSu7aPGOzkRVqeFSWtelTt3yyVxNR_OsfW44k';">
                 <div class="app-icon">
                     <img src="GhostIP.webp" alt="LogoIYR13" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -353,7 +353,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/NFQgzQbb#Ir-E5nP2dNTfAXKL8n9Jy2gxTd129CAIDK4oEd3Woj0';">
+                onclick="window.location.href='https://mega.nz/file/kIgSlIzL#Ir-E5nP2dNTfAXKL8n9Jy2gxTd129CAIDK4oEd3Woj0';">
                 <div class="app-icon">
                     <img src="ResourceHacker.webp" alt="LogoIYR14" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -363,7 +363,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/MM52BJ7J#AilMR_0Ir8Mh6HUD-iwLSeys3hGIJQXjX1NZPtKXg90';">
+                onclick="window.location.href='https://mega.nz/file/NAAl3aJS#AilMR_0Ir8Mh6HUD-iwLSeys3hGIJQXjX1NZPtKXg90';">
                 <div class="app-icon">
                     <img src="exam.webp" alt="LogoIYR15" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/1JZG0TgD#S7J2MEaYd52Yyc_gPlb0DYDv6IeE8XzIzAxTVTj4t6s';">
+                onclick="window.location.href='https://mega.nz/file/4FY3SLDR#S7J2MEaYd52Yyc_gPlb0DYDv6IeE8XzIzAxTVTj4t6s';">
                 <div class="app-icon">
                     <img src="PowerOfEnergy.webp" alt="LogoIYR16" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
