--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/4FY3SLDR#S7J2MEaYd52Yyc_gPlb0DYDv6IeE8XzIzAxTVTj4t6s';">
+                onclick="window.location.href='https://mega.nz/file/dVwHWJBR#Pa7AExgtCN0uZwuvugGIYhQmxmH-9oayVIQyTrpvSx8';">
                 <div class="app-icon">
                     <img src="PowerOfEnergy.webp" alt="LogoIYR16" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
