--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://mega.nz/file/dVwHWJBR#Pa7AExgtCN0uZwuvugGIYhQmxmH-9oayVIQyTrpvSx8';">
+                onclick="window.location.href='https://mega.nz/file/MIQQEISR#Ft4HW_7n-Gou0NSLAeR2Ky3m420IIVPWKh_i1kt-sOQ';">
                 <div class="app-icon">
                     <img src="PowerOfEnergy.webp" alt="LogoIYR16" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
