--- a/index.html
+++ b/index.html
@@ -382,6 +382,16 @@
                     <h1>PowerOfEnergy</h1>
                 </div>
             </div>
+            <div class="app-info"
+            onclick="window.location.href='https://mega.nz/file/cMQG3LhI#LSk6UXxKiaE_itXzFqRUhE6EvqTpjpx0julQDZMUawo';">
+            <div class="app-icon">
+                <img src="Animate.webp" alt="LogoIYR17" width="100px" height="100px"
+                    onerror="this.onerror=null; this.src='EmptyApp.svg';">
+            </div>
+            <div class="app-name">
+                <h1>Animate CC 2019</h1>
+            </div>
+        </div>
         </div>
     </div>
 </body>
