--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </div>
     <div class="app-row">
       <div class="app-info"
-        onclick="window.location.href='https://drive.google.com/file/d/1xuVQDHAicClm7dlPksBxW9H0EWcaOxhe/view?usp=drive_link';">
+        onclick="window.location.href='https://mega.nz/file/5FBg1DLZ#QBHw2CDrce95BrZdpFiwWvP8KxR2SX8rSP8yRGOD4mw';">
         <div class="app-icon">
           <img src="FlexiOptimizerIYR.webp" alt="LogoIYR1" width="100px" height="100px"
             onerror="this.onerror=null; this.src='EmptyApp.svg';" />
