--- a/index.html
+++ b/index.html
@@ -410,6 +410,16 @@
           <h1>Flash 8</h1>
         </div>
       </div>
+      <div class="app-info"
+        onclick="window.location.href='https://mega.nz/file/4JwQFI4K#MggVe_-8YziVXEkFkeSIyjunywGJE5xqOaJ6RC0pv2k';">
+        <div class="app-icon">
+          <img src="Office 2007 Pro.webp" alt="LogoIYR18" width="100px" height="100px"
+            onerror="this.onerror=null; this.src='EmptyApp.svg';" />
+        </div>
+        <div class="app-name">
+          <h1>Office 2007 Pro</h1>
+        </div>
+      </div>
     </div>
   </div>
 </body>
